--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9a57c4c6",
+   "id": "b54d915a",
    "metadata": {},
    "source": [
     "# Eat Safe, Love"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "064ef857",
+   "id": "1a7475e8",
    "metadata": {},
    "source": [
     "## Part 1: Database and Jupyter Notebook Set Up"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "664e3c1f",
+   "id": "c32b901b",
    "metadata": {},
    "source": [
     "Import the data provided in the `establishments.json` file from your Terminal. Name the database `uk_food` and the collection `establishments`.\n",
@@ -30,87 +30,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ecdd008",
+   "execution_count": 1,
+   "id": "3f0e7c74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import dependencies\n"
+    "# Import dependencies\n",
+    "from pymongo import MongoClient\n",
+    "import json\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59390c4a",
+   "execution_count": 2,
+   "id": "6403812b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an instance of MongoClient\n"
+    "# Create an instance of MongoClient\n",
+    "mongo = MongoClient(port=27017)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f9ececa",
+   "execution_count": 4,
+   "id": "b88f0426",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin', 'classDB', 'config', 'epa', 'local', 'met', 'uk_food']\n"
+     ]
+    }
+   ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "print(mongo.list_database_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71e373c1",
+   "execution_count": 5,
+   "id": "8b8def79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the uk_food database to a variable name\n"
+    "# assign the uk_food database to a variable name\n",
+    "db = mongo['uk_food']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1b89ed",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "id": "91a94da8",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18ab463c",
+   "execution_count": 10,
+   "id": "3a27e373",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'The Bay',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'The Coastguard Inn',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 1034540,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-08-17T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('63f1ab37ff647a919436eaf7'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review a document in the establishments collection\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a0d92df",
+   "execution_count": 11,
+   "id": "f4a5aacb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# review a document in the establishments collection\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11c9f11b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# assign the collection to a variable\n"
+    "# assign the collection to a variable\n",
+    "establishments = db['establishments']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d5671434",
+   "id": "c49a33c0",
    "metadata": {},
    "source": [
     "## Part 2: Update the Database"
@@ -118,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "314bd884",
+   "id": "327bc612",
    "metadata": {},
    "source": [
     "1. An exciting new halal restaurant just opened in Greenwich, but hasn't been rated yet. The magazine has asked you to include it in your analysis. Add the following restaurant \"Penang Flavours\" to the database."
@@ -127,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2da7648",
+   "id": "89abc26b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e5cece",
+   "id": "0544b2d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63bb10f9",
+   "id": "9af47c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ef4395a",
+   "id": "5b0064d0",
    "metadata": {},
    "source": [
     "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the `BusinessTypeID` and `BusinessType` fields."
@@ -165,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c63829",
+   "id": "7e80079d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e570caf",
+   "id": "34f4a5c0",
    "metadata": {},
    "source": [
     "3. Update the new restaurant with the `BusinessTypeID` you found."
@@ -183,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f599f3d",
+   "id": "8abe45c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6ad16f7",
+   "id": "f532e9da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67281254",
+   "id": "e5e1e533",
    "metadata": {},
    "source": [
     "4. The magazine is not interested in any establishments in Dover, so check how many documents contain the Dover Local Authority. Then, remove any establishments within the Dover Local Authority from the database, and check the number of documents to ensure they were deleted."
@@ -211,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "768474a6",
+   "id": "b520016f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a11d5f1b",
+   "id": "9bd18ed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a51aba0",
+   "id": "319b79ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c356f7b",
+   "id": "59aae1ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f1662d",
+   "id": "56a3e89b",
    "metadata": {},
    "source": [
     "5. Some of the number values are stored as strings, when they should be stored as numbers. Use `update_many` to convert `latitude` and `longitude` to decimal numbers."
@@ -259,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd4112ce",
+   "id": "00b6b474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08dd7c72",
+   "id": "54ce38d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0deacaf9",
+   "id": "d59362f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
