up to part 4 completed

--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b54d915a",
+   "id": "c9220475",
    "metadata": {},
    "source": [
     "# Eat Safe, Love"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a7475e8",
+   "id": "291128de",
    "metadata": {},
    "source": [
     "## Part 1: Database and Jupyter Notebook Set Up"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c32b901b",
+   "id": "7dc2f1a0",
    "metadata": {},
    "source": [
     "Import the data provided in the `establishments.json` file from your Terminal. Name the database `uk_food` and the collection `establishments`.\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3f0e7c74",
+   "id": "cb4349eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6403812b",
+   "id": "8af87b37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b88f0426",
+   "id": "9a0c8df6",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b8def79",
+   "id": "8f58e0df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91a94da8",
+   "id": "04085f50",
    "metadata": {
     "scrolled": false
    },
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3a27e373",
+   "id": "c0892d84",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f4a5aacb",
+   "id": "231b2804",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c49a33c0",
+   "id": "22e06411",
    "metadata": {},
    "source": [
     "## Part 2: Update the Database"
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327bc612",
+   "id": "d24d7d1f",
    "metadata": {},
    "source": [
     "1. An exciting new halal restaurant just opened in Greenwich, but hasn't been rated yet. The magazine has asked you to include it in your analysis. Add the following restaurant \"Penang Flavours\" to the database."
@@ -186,37 +186,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89abc26b",
+   "execution_count": 51,
+   "id": "e7281264",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "Penang_Flavours = {'BusinessName':'Penang Flavours','AddressLine1': 'Greenwich'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0544b2d7",
+   "execution_count": 52,
+   "id": "12042c8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x2b49099e888>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(Penang_Flavours)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9af47c1c",
+   "execution_count": 53,
+   "id": "d77a5adf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Greenwich',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " '_id': ObjectId('63f1d6d9e05ffd0a6e1b1fb6')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "query = {'BusinessName': 'Penang Flavours'}\n",
+    "results = establishments.find(query)\n",
+    "for result in results:\n",
+    "    pprint(result)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5b0064d0",
+   "id": "20164c43",
    "metadata": {},
    "source": [
     "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the `BusinessTypeID` and `BusinessType` fields."
@@ -224,17 +251,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7e80079d",
+   "execution_count": 54,
+   "id": "e54f55a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The BusinessType Restaurant/Cafe/Canteen has the BusinessTypeID of 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "query = establishments.find_one({'BusinessType': 'Restaurant/Cafe/Canteen'})\n",
+    "\n",
+    "print(f\"The BusinessType {query['BusinessType']} has the BusinessTypeID of {query['BusinessTypeID']}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "34f4a5c0",
+   "id": "1a60a4d3",
    "metadata": {},
    "source": [
     "3. Update the new restaurant with the `BusinessTypeID` you found."
@@ -242,27 +280,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8abe45c2",
+   "execution_count": 55,
+   "id": "b783135b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x2b49099c3c8>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "query = establishments.find_one({'BusinessName': 'Penang Flavours'})\n",
+    "establishments.update_many(query,{'$set':{\"BusinessType\" : \"Restaurant/Cafe/Canteen\",\\\n",
+    "                                                \"BusinessTypeID\" : 1}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f532e9da",
+   "execution_count": 56,
+   "id": "c0704cda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Greenwich',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('63f1d6d9e05ffd0a6e1b1fb6')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "query = {'BusinessName': 'Penang Flavours'}\n",
+    "results = establishments.find(query)\n",
+    "for result in results:\n",
+    "    pprint(result)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5e1e533",
+   "id": "787803c3",
    "metadata": {},
    "source": [
     "4. The magazine is not interested in any establishments in Dover, so check how many documents contain the Dover Local Authority. Then, remove any establishments within the Dover Local Authority from the database, and check the number of documents to ensure they were deleted."
@@ -270,18 +338,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b520016f",
+   "execution_count": 57,
+   "id": "0f0d7962",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "994"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "doverCount = establishments.count_documents({'LocalAuthorityName': 'Dover'})\n",
+    "doverCount"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd18ed2",
+   "id": "81c99388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319b79ca",
+   "id": "3136bd2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59aae1ab",
+   "id": "84a2c2eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a3e89b",
+   "id": "75a3b4d9",
    "metadata": {},
    "source": [
     "5. Some of the number values are stored as strings, when they should be stored as numbers. Use `update_many` to convert `latitude` and `longitude` to decimal numbers."
@@ -319,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b6b474",
+   "id": "540833f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54ce38d8",
+   "id": "633ee250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d59362f1",
+   "id": "4d4dd75c",
    "metadata": {},
    "outputs": [],
    "source": [
