--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9220475",
+   "id": "0634be42",
    "metadata": {},
    "source": [
     "# Eat Safe, Love"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291128de",
+   "id": "03290081",
    "metadata": {},
    "source": [
     "## Part 1: Database and Jupyter Notebook Set Up"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc2f1a0",
+   "id": "0b98b50d",
    "metadata": {},
    "source": [
     "Import the data provided in the `establishments.json` file from your Terminal. Name the database `uk_food` and the collection `establishments`.\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb4349eb",
+   "id": "4af07ea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8af87b37",
+   "execution_count": 41,
+   "id": "dd44cd35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9a0c8df6",
+   "execution_count": 42,
+   "id": "181446e9",
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "8f58e0df",
+   "execution_count": 43,
+   "id": "46fb45cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "04085f50",
+   "execution_count": 44,
+   "id": "886fc4ae",
    "metadata": {
     "scrolled": false
    },
@@ -105,8 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c0892d84",
+   "execution_count": 45,
+   "id": "4039dc98",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('63f1ab37ff647a919436eaf7'),\n",
+      " '_id': ObjectId('63f30b2fb7c31350aa678ef8'),\n",
       " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
       "            'rel': 'self'}],\n",
@@ -159,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "231b2804",
+   "execution_count": 46,
+   "id": "cc6f7b44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e06411",
+   "id": "daae9931",
    "metadata": {},
    "source": [
     "## Part 2: Update the Database"
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d24d7d1f",
+   "id": "705cd72a",
    "metadata": {},
    "source": [
     "1. An exciting new halal restaurant just opened in Greenwich, but hasn't been rated yet. The magazine has asked you to include it in your analysis. Add the following restaurant \"Penang Flavours\" to the database."
@@ -186,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "e7281264",
+   "execution_count": 47,
+   "id": "c4999a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,17 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "12042c8e",
+   "execution_count": 48,
+   "id": "54ba6cf6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x2b49099e888>"
+       "<pymongo.results.InsertOneResult at 0x20a9ee29dc8>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "d77a5adf",
+   "execution_count": 49,
+   "id": "7aba2c6f",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
      "text": [
       "{'AddressLine1': 'Greenwich',\n",
       " 'BusinessName': 'Penang Flavours',\n",
-      " '_id': ObjectId('63f1d6d9e05ffd0a6e1b1fb6')}\n"
+      " '_id': ObjectId('63f30b434885534424c5bfd6')}\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20164c43",
+   "id": "3da20e6f",
    "metadata": {},
    "source": [
     "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the `BusinessTypeID` and `BusinessType` fields."
@@ -251,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "e54f55a8",
+   "execution_count": 50,
+   "id": "fe16ed58",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a60a4d3",
+   "id": "dc7e8e64",
    "metadata": {},
    "source": [
     "3. Update the new restaurant with the `BusinessTypeID` you found."
@@ -280,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "b783135b",
+   "execution_count": 51,
+   "id": "ebf8c5b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x2b49099c3c8>"
+       "<pymongo.results.UpdateResult at 0x20a9edf7a88>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,14 +298,14 @@
    "source": [
     "# Update the new restaurant with the correct BusinessTypeID\n",
     "query = establishments.find_one({'BusinessName': 'Penang Flavours'})\n",
-    "establishments.update_many(query,{'$set':{\"BusinessType\" : \"Restaurant/Cafe/Canteen\",\\\n",
+    "establishments.update_one(query,{'$set':{\"BusinessType\" : \"Restaurant/Cafe/Canteen\",\\\n",
     "                                                \"BusinessTypeID\" : 1}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "c0704cda",
+   "execution_count": 52,
+   "id": "11728874",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
       " 'BusinessName': 'Penang Flavours',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('63f1d6d9e05ffd0a6e1b1fb6')}\n"
+      " '_id': ObjectId('63f30b434885534424c5bfd6')}\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "787803c3",
+   "id": "7904f091",
    "metadata": {},
    "source": [
     "4. The magazine is not interested in any establishments in Dover, so check how many documents contain the Dover Local Authority. Then, remove any establishments within the Dover Local Authority from the database, and check the number of documents to ensure they were deleted."
@@ -338,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "0f0d7962",
+   "execution_count": 53,
+   "id": "af464af4",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "994"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,37 +361,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81c99388",
+   "execution_count": 54,
+   "id": "17fa19ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x20a9eec3748>"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "query = {'LocalAuthorityName': 'Dover'}\n",
+    "establishments.delete_many(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3136bd2a",
+   "execution_count": 55,
+   "id": "a61a56a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "results = establishments.find(query)\n",
+    "for result in results:\n",
+    "    pprint(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84a2c2eb",
+   "execution_count": 56,
+   "id": "fbbe2452",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('63f30b2fb7c31350aa6791db'),\n",
+      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "pprint(establishments.find_one())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75a3b4d9",
+   "id": "1415ac18",
    "metadata": {},
    "source": [
     "5. Some of the number values are stored as strings, when they should be stored as numbers. Use `update_many` to convert `latitude` and `longitude` to decimal numbers."
@@ -399,32 +459,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "540833f5",
+   "execution_count": 57,
+   "id": "8ab11a7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x20a9eee1608>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude\n"
+    "# Change the data type from String to Decimal for longitude\n",
+    "query = {'geocode.longitude':{'$exists':True}}\n",
+    "establishments.update_many(query,[{'$set': { \"geocode.longitude\" : {'$toDecimal': \"$geocode.longitude\"}}}])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "633ee250",
+   "execution_count": 58,
+   "id": "a864431d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x20a9eee1948>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for latitude\n"
+    "# Change the data type from String to Decimal for latitude\n",
+    "query = {'geocode.latitude':{'$exists':True}}\n",
+    "establishments.update_many(query,[{'$set': { \"geocode.latitude\" : {'$toDecimal': \"$geocode.latitude\"}}}])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4d4dd75c",
+   "execution_count": 59,
+   "id": "b9812566",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('63f30b2fb7c31350aa6791db'),\n",
+      " 'geocode': {'latitude': Decimal128('51.083812'),\n",
+      "             'longitude': Decimal128('1.195625')},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the coordinates are now numbers\n"
+    "# Check that the coordinates are now numbers\n",
+    "pprint(establishments.find_one())\n",
+    "mongo.drop_database('uk_food')"
    ]
   }
  ],
