remove one line of code

--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0634be42",
+   "id": "1b5c2fb1",
    "metadata": {},
    "source": [
     "# Eat Safe, Love"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03290081",
+   "id": "bcc09108",
    "metadata": {},
    "source": [
     "## Part 1: Database and Jupyter Notebook Set Up"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b98b50d",
+   "id": "c5792532",
    "metadata": {},
    "source": [
     "Import the data provided in the `establishments.json` file from your Terminal. Name the database `uk_food` and the collection `establishments`.\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4af07ea7",
+   "id": "23e03923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dd44cd35",
+   "id": "9a36051b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "181446e9",
+   "id": "29c6bb7c",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "46fb45cd",
+   "id": "17ad56d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "886fc4ae",
+   "id": "86f2ec4f",
    "metadata": {
     "scrolled": false
    },
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4039dc98",
+   "id": "6ab2d862",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "cc6f7b44",
+   "id": "6903a16c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daae9931",
+   "id": "c3925ebd",
    "metadata": {},
    "source": [
     "## Part 2: Update the Database"
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "705cd72a",
+   "id": "f5d75f0e",
    "metadata": {},
    "source": [
     "1. An exciting new halal restaurant just opened in Greenwich, but hasn't been rated yet. The magazine has asked you to include it in your analysis. Add the following restaurant \"Penang Flavours\" to the database."
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c4999a29",
+   "id": "c0482254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "54ba6cf6",
+   "id": "12a7ca0a",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7aba2c6f",
+   "id": "77b58319",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da20e6f",
+   "id": "59dbe13c",
    "metadata": {},
    "source": [
     "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the `BusinessTypeID` and `BusinessType` fields."
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fe16ed58",
+   "id": "5589b7d8",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7e8e64",
+   "id": "afae1c88",
    "metadata": {},
    "source": [
     "3. Update the new restaurant with the `BusinessTypeID` you found."
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ebf8c5b5",
+   "id": "acb8acbb",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "11728874",
+   "id": "72ab2455",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7904f091",
+   "id": "4fbd3c70",
    "metadata": {},
    "source": [
     "4. The magazine is not interested in any establishments in Dover, so check how many documents contain the Dover Local Authority. Then, remove any establishments within the Dover Local Authority from the database, and check the number of documents to ensure they were deleted."
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "af464af4",
+   "id": "df20ce04",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "17fa19ba",
+   "id": "0e16c204",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a61a56a7",
+   "id": "2a402395",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "fbbe2452",
+   "id": "731b137a",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1415ac18",
+   "id": "a2f1c28d",
    "metadata": {},
    "source": [
     "5. Some of the number values are stored as strings, when they should be stored as numbers. Use `update_many` to convert `latitude` and `longitude` to decimal numbers."
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8ab11a7c",
+   "id": "cdada4ed",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a864431d",
+   "id": "7436b491",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b9812566",
+   "id": "d902f0f0",
    "metadata": {},
    "outputs": [
     {
@@ -555,8 +555,7 @@
    ],
    "source": [
     "# Check that the coordinates are now numbers\n",
-    "pprint(establishments.find_one())\n",
-    "mongo.drop_database('uk_food')"
+    "pprint(establishments.find_one())"
    ]
   }
  ],
